--- a/IMEHistory.yaml
+++ b/IMEHistory.yaml
@@ -28,6 +28,7 @@
             catch (Exception e) { return e.GetType().FullName + ": " + e.Message + Environment.NewLine + e.StackTrace; }
         }
     }
+
     static class JPNIHDS {
         
         // Reference: https://github.com/sysenter-eip/imppred_parser
@@ -83,7 +84,6 @@
     
         public static T ReadFrom<T>(BinaryReader reader) where T : struct
         {
-            // header
             int size = Marshal.SizeOf(typeof(T));
             IntPtr ptr = IntPtr.Zero;
     
@@ -173,7 +173,7 @@
                     }
                     
                     if (sentence.dwSubSize != iRealSubSize)
-                        textLine.Append(" //[Warn] dwSubSize and iRealSubSize is mismatch.");
+                        textLine.Append(" //[Warn] dwSubSize and iRealSubSize are mismatched."");
                     
                     output.AppendLine(textLine.ToString());                    
                 }
